--- a/bibliography/index.html
+++ b/bibliography/index.html
@@ -1,11 +1,22 @@
-<html style="background-color: 325fa2; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+<html style="background-color: #14696f; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+    <title>Gray's Science Fair</title>
     <body>
-        <a class="purple" style="font-size: 30px;" href="../">Click to go back to the main page!</a><br><br>
+        <a href="../"><button class="purple" style="font-size: 30px;">Home Page 🏠</button></a><br><br>
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vSMIYT_EPlqOAoQvMnlgh8Rk_RNTY6ypAjPUKemPhLly08KTlEhv96vVMh94pxDGc9DnaY7UYErQeO1/pub?embedded=true" height="700px" width="800px" style="border: none;"></iframe>
     </body>
     <style>
         .purple {
-            color: #551a8b;
+            color: black;
+        }
+                
+        button {
+            height: 40px;
+            width: 250px;
+        }
+
+        * {
+            margin: 0px;
+            padding: 0px;
         }
     </style>
 </html>
