--- a/imagecredits/index.html
+++ b/imagecredits/index.html
@@ -1,15 +1,16 @@
-<html style="background-color: 325fa2; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+<html style="background-color: #14696f; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+    <title>Gray's Science Fair</title>
     <body>
-        <a style="font-size: 30px;" href="../" class="purple">Click to go back to the main page!</a><br><br>
+        <a href="../"><button class="purple" style="font-size: 30px;">Home Page 🏠</button></a><br><br>
 
-        <img src="img1.png" width="500px" style="border: 2px solid black;"><br>
-        <a>Image found on <a href="https://photosforclass.com" class="purple">Photosforclass.com</a> <a href="https://pixabay.com/photos/pulse-oximeter-medical-finger-6582524/">Click to get to image on pixabay!</a></a><br><br>
+        <img src="img1.png" width="700px" style="border: 2px solid black;"><br>
+        <a>Image found on <a href="https://photosforclass.com">Photosforclass.com</a> <a href="https://pixabay.com/photos/pulse-oximeter-medical-finger-6582524/">Click to get to image on pixabay!</a></a><br><br>
 
-        <img src="img2.png" width="500px" style="border: 2px solid black;"><br>
-        <a class="purple" href="https://www.freepik.com/free-vector/blue-protection-mask-realistic-advertise-banner-3d-illustrations-isolated_8875095.htm#query=surgical%20mask&position=11&from_view=keyword">Image by frimufilms</a> on Freepik<br><br>
+        <img src="img2.png" width="700px" style="border: 2px solid black;"><br>
+        <a href="https://www.freepik.com/free-vector/blue-protection-mask-realistic-advertise-banner-3d-illustrations-isolated_8875095.htm#query=surgical%20mask&position=11&from_view=keyword">Image by frimufilms</a> on Freepik<br><br>
 
-        <img src="img3.jpg" width="500px" style="border: 2px solid black;"><br>
-        Image by <a class="purple" href="https://www.freepik.com/free-vector/realistic-kn95-face-mask_11375632.htm#query=kn95%20mask&position=0&from_view=search&track=sph">Freepik</a><br>
+        <img src="img3.jpg" width="700px" style="border: 2px solid black;"><br>
+        Image by <a href="https://www.freepik.com/free-vector/realistic-kn95-face-mask_11375632.htm#query=kn95%20mask&position=0&from_view=search&track=sph">Freepik</a><br>
 
         <br><br>
         <a href="http://www.photosforclass.com" target="_blank"><img src="http://www.photosforclass.com/images/logos/rectangle/PhotosForClass-h35.png" /></a>
@@ -21,7 +22,17 @@
     </body>
     <style>
         .purple {
-            color: #551a8b;
+            color: black;
+        }
+                
+        button {
+            height: 40px;
+            width: 250px;
+        }
+
+        * {
+            margin: 0px;
+            padding: 0px;
         }
     </style>
 </html>
