--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<html style="background-color: 325fa2; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+<html style="background-color: #14696f; text-align: center; font-family: Arial, Helvetica, sans-serif;" >
+<title>Gray's Science Fair</title>
     <body>
         <ul style="list-style-type: none; font-size: 40px;">
             <li style="font-size: 60px">Gray Jackson-Noell Science Fair</li>
             <li style="font-size: 20px;">(Click one!)</li>
             <br>
-            <li><a class="purple" href="video/">Video Explination</a></li>
+            <li><a href="video/"><button class="purple">Video Explination 🎥</button></a></li>
             <br>
-            <li><a class="purple" href="packet/">Science Fair Packet</a></li>
+            <li><a href="packet/"><button class="purple">Science Fair Packet 🔎</button></a></li>
             <br>
-            <li><a class="purple" href="imagecredits/">Image Credits</a></li>
+            <li><a href="imagecredits/"><button class="purple">Image Credits 🖼️</button></a></li>
             <br>
-            <li><a class="purple" href="bibliography/">Bibliography</a></li>
+            <li><a href="bibliography/"><button class="purple">Bibliography 📖</button></a></li>
         </ul>
     </body>
     <style>
         .purple {
-            color: #551a8b;
+            color: black;
+        }
+
+        button {
+            height: 50px;
+            width: 400px;
+            font-size: 30px;
+        }
+
+        * {
+            margin: 0px;
+            padding: 0px;
         }
     </style>
 </html>
