--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
             <li style="font-size: 60px">Gray Jackson-Noell Science Fair</li>
             <li style="font-size: 20px;">(Click one!)</li>
             <br>
-            <li><a href="video/"><button class="purple">Video Explination 🎥</button></a></li>
+            <li><a href="video/"><button class="purple">Video Explination &#127909;</button></a></li>
             <br>
-            <li><a href="packet/"><button class="purple">Science Fair Packet 🔎</button></a></li>
+            <li><a href="packet/"><button class="purple">Science Fair Packet &#128270;</button></a></li>
             <br>
-            <li><a href="imagecredits/"><button class="purple">Image Credits 🖼️</button></a></li>
+            <li><a href="imagecredits/"><button class="purple">Image Credits &#128444;</button></a></li>
             <br>
-            <li><a href="bibliography/"><button class="purple">Bibliography 📖</button></a></li>
+            <li><a href="bibliography/"><button class="purple">Bibliography &#128214;</button></a></li>
         </ul>
     </body>
     <style>
