--- a/imagecredits/index.html
+++ b/imagecredits/index.html
@@ -1,7 +1,7 @@
 <html style="background-color: #14696f; text-align: center; font-family: Arial, Helvetica, sans-serif;">
     <title>Gray's Science Fair</title>
     <body>
-        <a href="../"><button class="purple" style="font-size: 30px;">Home Page 🏠</button></a><br><br>
+        <a href="../"><button class="purple" style="font-size: 30px;">Home Page &#127968;</button></a><br><br>
 
         <img src="img1.png" width="700px" style="border: 2px solid black;"><br>
         <a>Image found on <a href="https://photosforclass.com">Photosforclass.com</a> <a href="https://pixabay.com/photos/pulse-oximeter-medical-finger-6582524/">Click to get to image on pixabay!</a></a><br><br>
